--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-                                                                <h1>OCActiveObjects</h1>
+                                                                -- OCActiveObjects --
 <h2>Vision:</h2>
   Create a simple O/R mapping library for Sqlite in iPhone SDK.
 
